--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="header_content d-flex justify-content-between align-items-center">
-						<a href="#"><img src="assets/images/logoo.svg" width="120px"></a>
+						<a href="#"><img src="assets/images/logo.svg" width="120px"></a>
                         <div>
-						<a href="https://www.youtube.com/watch?v=fkmO9YJiA2o&ab_channel=BaraaBilal" class="header_btn" >WATCH WHAT IS CHIMERA</a>
-                        <a href="https://www.youtube.com/watch?v=z96M0UFdyUU&t=158s&ab_channel=BaraaBilal" class="header_btn" >WATCH PITCH DECK</a>
                     </div>
 					</div>
 				</div>
@@ -66,8 +64,8 @@
 			<div class="row">
 				<div class="col-md-11 mx-auto">
 					<div class="hero_content text-center">
-						<h1>Meet Your Smartest Employee, Who Knows Everything</h1>
-						<p>Imagine a world where your data speaks your language. Connect your data sources to Chimera, and meet your best employee. Ask any question, get insights as if from a seasoned expert. </p></br>
+						<h1>Simplify Group Payments! Meet The Future of FinTech</h1>
+						<p>Crearte a payment link, send to your friends, use your virtual card to use the collected money!</p></br>
 						<div class="hero_buttons">
    
 <!-- INPUT BOX -->
@@ -89,7 +87,7 @@
 
 
 						</div>
-						<img src="assets/images/hero.png" class="w-100 mt-5 mb-4">
+						<img src="assets/images/hero.svg" class="w-100 mt-5 mb-4">
 					</div>
 				</div>
 			</div>
@@ -98,26 +96,26 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="heading_box text-center">
-						<h1 class="mb-4">Work Smarter, Not Harder</h1>
+						<h1 class="mb-4">Split Payments Like Never Before</h1>
 					</div>
 					<div class="owl-carousel mb-5 reative" id="article">
 						<div class="item">
 							<div class="samrt_box p-4 bg-1 relative">
-								<h6 class="text-white">Connect Anything</h6>
-								<p class="">Seamlessly connect Chimera with all your data sources, from emails to databases, ensuring a unified view of your entire data landscape.</p>
+								<h6 class="text-white">Instant Payment Links</h6>
+								<p class="">Shareable links that make contributing as easy as clicking a button.</p>
 								<img src="assets/images/gradient.png" class="gradient">
 							</div>
 						</div>
 						<div class="item">
 							<div class="samrt_box p-4 bg-2">
-								<h6 class="text-white">Ask Anything</h6>
-								<p class="">Chimera's conversational AI lets you ask any question and get precise answers, turning complex data queries into simple conversations.</p>
+								<h6 class="text-white">Universal Access</h6>
+								<p class="">Works on any device with an internet connection. No app download required.</p>
 							</div>
 						</div>
 						<div class="item">
 							<div class="samrt_box p-4 bg-1">
-								<h6 class="text-white">Build Anything</h6>
-								<p class="">With Chimera, create tailored dashboards instantly, bringing critical data points to the forefront for real-time decision-making</p>
+								<h6 class="text-white">Virtual Card</h6>
+								<p class="">Funds are loaded into a virtual card so you can use it to pay anything online or add it to your mobile wallet to pay at any POS!</p>
 							</div>
 						</div>	    
 					</div>
@@ -137,19 +135,19 @@
 					  <div class="accordion-item">
 					    <h2 class="accordion-header" id="headingOne">
 					      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-					       <img src="assets/images/Check.svg"> <span class="mx-2"> Connect Your Data from tons of existing integrations with few clicks</span>
+					       <img src="assets/images/Check.svg"> <span class="mx-2"> Create a payment link in 5 seconds</span>
 					      </button>
 					    </h2>
 					    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
 					      <div class="accordion-body">
-					        <p class="text-white">Start by linking your diverse data sources to Chimera. From CRM systems and productivity tools to databases and social media platforms, integrate with a few clicks.</p>
+					        <p class="text-white">Send the link to your friends.</p>
 					      </div>
 					    </div>
 					  </div>
 					  <div class="accordion-item">
 					    <h2 class="accordion-header" id="headingTwo">
 					      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-					       <img src="assets/images/Check.svg"> <span class="mx-2">Ask any question and get real-time answers </span>
+					       <img src="assets/images/Check.svg"> <span class="mx-2">Share the link with your group or friends </span>
 					      </button>
 					    </h2>
 					    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -161,7 +159,7 @@
 					  <div class="accordion-item">
 					    <h2 class="accordion-header" id="headingThree">
 					      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-					       	<img src="assets/images/Check.svg"> <span class="mx-2"> Take a step further and build dashboards instantly</span>
+					       	<img src="assets/images/Check.svg"> <span class="mx-2"> Money is loaded into your virtual card</span>
 					      </button>
 					    </h2>
 					    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -175,7 +173,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="apps_box text-center">
-					<img src="assets/images/apps.svg" class="w-75">
+					<img src="assets/images/apps.png" class="w-50">
 				</div>
 			</div>
 		</div>
@@ -187,7 +185,7 @@
 		<div class="row  justify-content-center">
 			<div class="col-md-12">
 				<div class="text-center heading_box">
-					<h1>What is Actually Chimera?</h1>
+					<h1>What is Actually SplitPay?</h1>
 				</div>
 			</div>
 
@@ -201,8 +199,9 @@
 						</div>
 						<div class="col-md-4">
 							<div class="feature_content">
-								<h2>Large Language Model LLM</h2>
-								<p class="mb-0">At its essence, Chimera is a  Large Language Model (LLM) tailored specifically for your business. Unlike generic AI, Chimera is built upon and evolves with your unique data ecosystem. This means every piece of information—every email, transaction, customer interaction—feeds into Chimera, making it smarter and more attuned to your business needs over time.</p>
+								<h2>SplitPay</h2>
+								<p class="mb-0">SplitPay is a revolutionary platform designed to streamline the way groups manage shared expenses, from dining out and booking group travels to buying collective gifts. By utilizing the innovative concept of virtual cards, SplitPay allows users to collect money from group members through a simple payment link. Once the target amount is reached, the funds are loaded onto a virtual card, instantly ready for use. This virtual card, essentially a digital version of traditional plastic cards, can be used for online transactions or in-store purchases where digital payments are accepted. It offers a secure, efficient, and hassle-free solution to managing group finances, eliminating the need for complex calculations, awkward reminders, or handling cash. With SplitPay, enjoying shared experiences becomes seamless, focusing on the joy of the moment rather than the logistics of payment.
+									</p>
 							</div>
 						</div>
 					</div>
@@ -223,9 +222,9 @@
 							<div class="row">
 								<div class="col-md-8 mx-auto">
 									<div class="heading_box text-center">
-										<h3>Be part of the future of business intelligence</h3>
+										<h3>Be part of the future of FinTech</h3>
 										<img src="assets/images/line.svg">
-										<p>Unlock 10x productivity with Chimera</p>
+										<p>Split Payments Quickly!</p>
 										<a href="#">GET EARLY ACCESS SOON</a>
 									</div>
 								</div>
@@ -234,7 +233,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="text-center mt-3 mb-2">
-									<a href="#"><img src="assets/images/logoo.svg" width="120px"></a>
+									<a href="#"><img src="assets/images/logo.svg" width="120px"></a>
 								</div>
 							</div>
 						</div>
