--- a/index.html
+++ b/index.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <link rel="icon" href="assets/images/icon.svg" type="image/x-icon">
+	<link rel="icon" href="assets/images/icon.svg" type="image/x-icon">
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<title>Chimera</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/custom.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/css/custom.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+		rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Linking Owl Carousel CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 	<!-- Hotjar Tracking Code for https://get-chimera.com -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:3881708,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+	<script>
+		(function (h, o, t, j, a, r) {
+			h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+			h._hjSettings = { hjid: 3881708, hjsv: 6 };
+			a = o.getElementsByTagName('head')[0];
+			r = o.createElement('script'); r.async = 1;
+			r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+			a.appendChild(r);
+		})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+	</script>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16473757584">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16473757584">
+	</script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-  gtag('config', 'AW-16473757584');
-</script>
+		gtag('config', 'AW-16473757584');
+	</script>
 
 </head>
+
 <body>
 	<!-- header -->
 	<div class="header pt-3 pb-3 bb-1">
@@ -50,8 +58,9 @@
 					<div class="header_content d-flex justify-content-between align-items-center">
 						<a href="#"><img src="assets/images/logo.svg" width="120px"></a>
                         <div>
-                    </div>
-					</div>
+							<a href="https://app.splitpay-app.com" class="header_btn" >CREATE A PAYMENT LINK</a>
+						</div>
+						</div>
 				</div>
 			</div>
 		</div>
@@ -63,32 +72,19 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-11 mx-auto">
-					<div class="hero_content text-center">
-						<h1>Simplify Group Payments! Meet The Future of FinTech</h1>
-						<p>Crearte a payment link, send to your friends, use your virtual card to use the collected money!</p></br>
-						<div class="hero_buttons">
-   
-<!-- INPUT BOX -->
-<div id="mc_embed_shell">
-    <link href="your-stylesheet.css" rel="stylesheet" type="text/css">
-    <div id="mc_embed_signup">
-        <form action="https://get-chimera.us10.list-manage.com/subscribe/post?u=8784341695ceff57ad91bf3ea&amp;id=165fdf2cb8&amp;f_id=006fdee5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="width: 100%; display: flex; justify-content: center;">
-            <div class="mc-field-group">
-                <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" placeholder="Email Address">
-                <input type="submit" value="GET EARLY ACCESS SOON" name="subscribe" id="mc-embedded-subscribe" class="button">
-            </div>
-        </form>
-    </div>
-</div>
-<!-- END OF INPUT BOX -->
-
-
-
-
-
+					<div class="hero_section">
+						<div class="content">
+							<h1>Simplify Group Payments! Meet The Future of FinTech</h1>
+							<p>Create a payment link, send to your friends, get the money in your bank!</p>
+							<div class="hero_buttons">
+								<a href="https://app.splitpay-app.com">CREATE A PAYMENT LINK</a>
+							</div>
 						</div>
-						<img src="assets/images/hero.svg" class="w-100 mt-5 mb-4">
+						<div class="pic">
+							<img src="assets/images/phone.png" style="width: 100%;" class="mt-5 mb-4">
+						</div>
 					</div>
+					
 				</div>
 			</div>
 		</div>
@@ -109,15 +105,17 @@
 						<div class="item">
 							<div class="samrt_box p-4 bg-2">
 								<h6 class="text-white">Universal Access</h6>
-								<p class="">Works on any device with an internet connection. No app download required.</p>
+								<p class="">Works on any device with an internet connection. No app download required.
+								</p>
 							</div>
 						</div>
 						<div class="item">
 							<div class="samrt_box p-4 bg-1">
-								<h6 class="text-white">Virtual Card</h6>
-								<p class="">Funds are loaded into a virtual card so you can use it to pay anything online or add it to your mobile wallet to pay at any POS!</p>
+								<h6 class="text-white">Fast Collection</h6>
+								<p class="">Funds are loaded into your bank account so you can use it to pay anything
+									online or add it to your mobile wallet to pay at any POS!</p>
 							</div>
-						</div>	    
+						</div>
 					</div>
 				</div>
 			</div>
@@ -132,48 +130,61 @@
 				<div class="heading_box">
 					<h1 class="mb-4">How it works?</h1>
 					<div class="accordion" id="accordionExample">
-					  <div class="accordion-item">
-					    <h2 class="accordion-header" id="headingOne">
-					      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-					       <img src="assets/images/Check.svg"> <span class="mx-2"> Create a payment link in 5 seconds</span>
-					      </button>
-					    </h2>
-					    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-					      <div class="accordion-body">
-					        <p class="text-white">Send the link to your friends.</p>
-					      </div>
-					    </div>
-					  </div>
-					  <div class="accordion-item">
-					    <h2 class="accordion-header" id="headingTwo">
-					      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-					       <img src="assets/images/Check.svg"> <span class="mx-2">Share the link with your group or friends </span>
-					      </button>
-					    </h2>
-					    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-					      <div class="accordion-body">
-					        <p class="text-white">Start by linking your diverse data sources to Chimera. From CRM systems and productivity tools to databases and social media platforms, integrate with a few clicks.</p>
-					      </div>
-					    </div>
-					  </div>
-					  <div class="accordion-item">
-					    <h2 class="accordion-header" id="headingThree">
-					      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-					       	<img src="assets/images/Check.svg"> <span class="mx-2"> Money is loaded into your virtual card</span>
-					      </button>
-					    </h2>
-					    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-					      <div class="accordion-body">
-					       	<p class="text-white">Start by linking your diverse data sources to Chimera. From CRM systems and productivity tools to databases and social media platforms, integrate with a few clicks.</p>
-					      </div>
-					    </div>
-					  </div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingOne">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+									data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+									<img src="assets/images/Check.svg"> <span class="mx-2"> Create a payment link in 5
+										seconds</span>
+								</button>
+							</h2>
+							<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+								data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+									<p class="text-white">Send the link to your friends.</p>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingTwo">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+									data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+									<img src="assets/images/Check.svg"> <span class="mx-2">Share the link with your
+										group or friends </span>
+								</button>
+							</h2>
+							<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+								data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+									<p class="text-white">Start by linking your diverse data sources to Chimera. From
+										CRM systems and productivity tools to databases and social media platforms,
+										integrate with a few clicks.</p>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingThree">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+									data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+									<img src="assets/images/Check.svg"> <span class="mx-2"> Money is loaded into your
+										bank account</span>
+								</button>
+							</h2>
+							<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+								data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+									<p class="text-white">Start by linking your diverse data sources to Chimera. From
+										CRM systems and productivity tools to databases and social media platforms,
+										integrate with a few clicks.</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="apps_box text-center">
-					<img src="assets/images/apps.png" class="w-50">
+					<img src="assets/images/appps.svg" class="w-50">
 				</div>
 			</div>
 		</div>
@@ -200,96 +211,91 @@
 						<div class="col-md-4">
 							<div class="feature_content">
 								<h2>SplitPay</h2>
-								<p class="mb-0">SplitPay is a revolutionary platform designed to streamline the way groups manage shared expenses, from dining out and booking group travels to buying collective gifts. By utilizing the innovative concept of virtual cards, SplitPay allows users to collect money from group members through a simple payment link. Once the target amount is reached, the funds are loaded onto a virtual card, instantly ready for use. This virtual card, essentially a digital version of traditional plastic cards, can be used for online transactions or in-store purchases where digital payments are accepted. It offers a secure, efficient, and hassle-free solution to managing group finances, eliminating the need for complex calculations, awkward reminders, or handling cash. With SplitPay, enjoying shared experiences becomes seamless, focusing on the joy of the moment rather than the logistics of payment.
-									</p>
+								<p class="mb-0">
+									SplitPay is a revolutionary platform designed to simplify the way groups manage
+									shared expenses, from dining out and booking group travels to buying collective
+									gifts. Shifting away from the concept of virtual cards, SplitPay now enhances the
+									experience by directly loading money into users' accounts. Users can collect money
+									from group members via a simple payment link. Once the target amount is collected,
+									the funds are immediately available in the user's SplitPay account, ready for use.
+									This direct loading method streamlines online transactions or in-store purchases
+									where digital payments are accepted, offering a secure, efficient, and hassle-free
+									solution to managing group finances. It eliminates the need for complex
+									calculations, awkward reminders, or handling cash. With SplitPay, enjoying shared
+									experiences becomes seamless, focusing on the joy of the moment rather than the
+									logistics of payment. </p>
 							</div>
 						</div>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
 	</div>
 	<!-- feature -->
 
 	<!-- footer -->
-	
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="footer">
-						<div class="frame">
-							<div class="row">
-								<div class="col-md-8 mx-auto">
-									<div class="heading_box text-center">
-										<h3>Be part of the future of FinTech</h3>
-										<img src="assets/images/line.svg">
-										<p>Split Payments Quickly!</p>
-										<a href="#">GET EARLY ACCESS SOON</a>
-									</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="footer">
+					<div class="frame">
+						<div class="row">
+							<div class="col-md-8 mx-auto">
+								<div class="heading_box text-center">
+									<h3>Be part of the future of FinTech</h3>
+									<img src="assets/images/line.svg">
+									<p>Split Payments Quickly!</p>
+									<a href="https://app.splitpay-app.com">CREATE A PAYMENT LINK</a>
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<div class="text-center mt-3 mb-2">
-									<a href="#"><img src="assets/images/logo.svg" width="120px"></a>
-								</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="text-center mt-3 mb-2">
+								<a href="#"><img src="assets/images/logo.svg" width="120px"></a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	
+	</div>
+
 	<!-- footer -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Linking jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <!-- Linking Owl Carousel JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <!-- Your custom script -->
-  <script>
-  $(document).ready(function(){
-      $('#article').owlCarousel({
-        loop:true,
-        margin:30,
-        autoplay:true, 
-	      autoplayTimeout:3000, 
-	      autoplayHoverPause:true, 
-	     dots:false,
-        nav:false,
-        responsive:{
-          0:{
-            items:1
-          },
-          600:{
-            items:2
-          },
-          1000:{
-            items:3
-          }
-        }
-      })
-    });
-</script>
+	<!-- Linking jQuery -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<!-- Linking Owl Carousel JS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+	<!-- Your custom script -->
+	<script>
+		$(document).ready(function () {
+			$('#article').owlCarousel({
+				loop: true,
+				margin: 30,
+				autoplay: true,
+				autoplayTimeout: 3000,
+				autoplayHoverPause: true,
+				dots: false,
+				nav: false,
+				responsive: {
+					0: {
+						items: 1
+					},
+					600: {
+						items: 2
+					},
+					1000: {
+						items: 3
+					}
+				}
+			})
+		});
+	</script>
 
 </body>
+
 </html>
