--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link rel="icon" href="assets/images/icon.svg" type="image/x-icon">
-
+	<meta property="og:image" content="https://splitpay-app.com/assets/images/icon.svg" />
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
