--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-11 mx-auto">
-					<div class="hero_section">
+					<div class="product_hunt">
+						<a href="https://www.producthunt.com/posts/splitpay?utm_source=badge-top-post-topic-badge&utm_medium=badge&utm_souce=badge-splitpay" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/top-post-topic-badge.svg?post_id=445275&theme=light&period=weekly&topic_id=94" alt="SplitPay - Create&#0032;a&#0032;link&#0044;&#0032;send&#0044;&#0032;get&#0032;the&#0032;money&#0032;in&#0032;your&#0032;bank | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+					</div>
+						<div class="hero_section">
+	
 						<div class="content">
 							<h1>Simplify Group Payments! Meet The Future of FinTech</h1>
 							<p>Create a payment link, send to your friends, get the money in your bank!</p>
