--- a/index.html
+++ b/index.html
@@ -37,25 +37,52 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
 
+<script>
+	function toggleMenu() {
+    var menu = document.getElementById("mobileMenu");
+    if (menu.style.display === "block") {
+        menu.style.display = "none";
+    } else {
+        menu.style.display = "block";
+    }
+}
+
+</script>
 </head>
 
 <body>
-	<!-- header -->
-	<div class="header pt-3 pb-3 bb-1">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="header_content d-flex justify-content-between align-items-center">
-						<a href="#"><img src="assets/images/logo.svg" width="120px"></a>
-                        <div>
-							<a href="https://app.splitpay-app.com" class="header_btn" >CREATE A PAYMENT LINK</a>
-						</div>
-						</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- header -->
+
+<!-- header -->
+<div class="header pt-3 pb-3 bb-1">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="header_content d-flex justify-content-between align-items-center">
+                    <a href="#"><img src="assets/images/logo.svg" alt="Logo" width="120px"></a>
+                    <!-- Desktop Navigation -->
+                    <div class="navigation d-none d-md-flex align-items-center">
+                        <a href="https://blog.splitpay-app.com" class="header_link">Blog</a>
+                        <a href="mailto:baraa@splitpay-app.com" class="header_link">Contact</a>
+                        <a href="https://app.splitpay-app.com" class="header_btn">CREATE A PAYMENT LINK</a>
+                    </div>
+                    <!-- Mobile Navigation -->
+                    <div class="mobile-navigation d-flex d-md-none align-items-center">
+                        <a href="https://app.splitpay-app.com" class="header_btn mobile-link">CREATE A PAYMENT LINK</a>
+                        <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
+                    </div>
+                </div>
+                <!-- Dropdown Menu Content -->
+                <div id="mobileMenu" class="mobile-menu-content" style="display: none;">
+                    <a href="https://blog.splitpay-app.com" class="mobile-menu-item">Blog</a>
+                    <a href="mailto:baraa@splitpay-app.com" class="mobile-menu-item">Contact</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- header -->
+
+
 
 	<!-- hero -->
 	<div class="hero">
