--- a/index.html
+++ b/index.html
@@ -278,6 +278,14 @@
 							<div class="text-center mt-3 mb-2">
 								<a href="#"><img src="assets/images/logo.svg" width="120px"></a>
 							</div>
+						</br>
+					</br>
+
+							<div class="footer-class">
+								<a href="mailto:baraa@splitpay-app.com" class="header_link">Contact</a>
+								<a href="terms_and_conditions.html" class="header_link">Terms and Conditions</a>
+								<a href="privacy_policy.html" class="header_link">Privacy Policy</a>
+							</div>
 						</div>
 					</div>
 				</div>
