--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href="#"><img src="assets/images/logo.svg" alt="Logo" width="120px"></a>
                     <!-- Desktop Navigation -->
                     <div class="navigation d-none d-md-flex align-items-center">
-                        <a href="https://blog.splitpay-app.com" class="header_link">Blog</a>
+                    <!--   <a href="https://blog.splitpay-app.com" class="header_link">Blog</a>--> 
                         <a href="mailto:baraa@splitpay-app.com" class="header_link">Contact</a>
                         <a href="https://app.splitpay-app.com" class="header_btn">CREATE A PAYMENT LINK</a>
                     </div>
